# kokkosAtomicCompareExchange

./: CMakeLists.txt  atomicCompareExchange.cpp  rangePolicy.cpp  teamPolicy.cpp
